@@ -6,6 +6,7 @@ import java.io.Serializable;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public record EventResult(
     UUID id,
@@ -54,9 +55,7 @@ public record EventResult(
             event.getPerformer(),
             event.getImg(),
             event.getStatus().name(),
-            event.getSchedules() != null
-                ? event.getSchedules().stream().map(ScheduleResult::from).toList()
-                : List.of()
+            event.getSchedules().stream().map(ScheduleResult::from).collect(Collectors.toList())
         );
     }
 }
